--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,22 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
-
   <body>
     <header id='js-header' class='l-header p-header <%= current_page?(root_path)? 'is-top': '' %>'>
       <h1 class='p-header__logo'>
-        <a class='p-header__logo-anchor' href='/'>LEAN CAMP</a>
+        <a class='p-header__logo-anchor' href='/'>
+          <svg class='p-header__logo-svg' viewBox='0 0 180 156'>
+            <rect x='0' y='0' width='179.602' height='155.985' style='fill:none;'/>
+            <path d='M91.757,9.858c1.374,-2.381 0.557,-5.43 -1.823,-6.804c-2.381,-1.375 -5.43,-0.558 -6.804,1.823l-81.033,140.353c-1.375,2.381 -0.558,5.429 1.823,6.804c2.381,1.374 5.429,0.557 6.804,-1.823l81.033,-140.353Z' />
+            <path d='M119.008,56.743c1.374,-2.38 0.557,-5.429 -1.823,-6.804c-2.381,-1.374 -5.43,-0.557 -6.804,1.823l-55.24,95.678c-1.374,2.381 -0.557,5.43 1.823,6.804c2.381,1.375 5.43,0.558 6.804,-1.823l55.24,-95.678Z' />
+            <path d='M92.12,4.703c-1.374,-2.381 -4.423,-3.198 -6.804,-1.823c-2.38,1.374 -3.197,4.423 -1.823,6.803l26.996,46.757c1.374,2.381 4.423,3.198 6.803,1.823c2.381,-1.374 3.198,-4.423 1.823,-6.803l-26.995,-46.757Z' />
+            <path d='M173.119,155.122c2.749,0 4.981,-2.232 4.981,-4.981c0,-2.749 -2.232,-4.98 -4.981,-4.98l-34.055,0c-2.748,0 -4.98,2.231 -4.98,4.98c0,2.749 2.232,4.981 4.98,4.981l34.055,0Z' />
+            <path d='M141.778,84.851c-1.374,-2.381 -4.423,-3.198 -6.804,-1.823c-2.38,1.374 -3.197,4.423 -1.823,6.804l36.046,62.432c1.374,2.381 4.423,3.198 6.804,1.823c2.38,-1.374 3.197,-4.423 1.823,-6.803l-36.046,-62.433Z' />
+            <path d='M141.339,89.632c1.375,-2.38 0.558,-5.429 -1.823,-6.803c-2.38,-1.375 -5.429,-0.558 -6.803,1.823l-35.809,62.021c-1.374,2.381 -0.557,5.43 1.823,6.804c2.381,1.375 5.43,0.558 6.804,-1.823l35.808,-62.022Z' />
+            <path d='M100.521,155.12c2.749,0 4.981,-2.232 4.981,-4.981c0,-2.749 -2.232,-4.981 -4.981,-4.981l-40.792,0c-2.749,0 -4.981,2.232 -4.981,4.981c0,2.749 2.232,4.981 4.981,4.981l40.792,0Z' />
+          </svg>
+          LEAN CAMP
+        </a>
       </h1>
       <nav class='p-header__nav'>
         <% if user_signed_in? %>
