--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -784,6 +784,30 @@ input[type="checkbox"] {
     padding-bottom: 5px;
     padding-left: 20px; }
 
+.c-okr {
+  display: grid;
+  grid-template-rows: max-content;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "priority goal" "next     Soundness";
+  border: 2px solid #273444;
+  border-radius: 4px;
+  background-color: #fff; }
+  .c-okr__cell {
+    min-height: 50%;
+    padding: 10px; }
+    .c-okr__cell--goal {
+      grid-area: goal;
+      border-bottom: 2px solid #273444; }
+    .c-okr__cell--Soundness {
+      grid-area: Soundness; }
+    .c-okr__cell--priority {
+      grid-area: priority;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-okr__cell--next {
+      grid-area: next;
+      border-right: 2px solid #273444; }
+
 .c-signboard {
   position: relative;
   font-family: 'Quicksand', sans-serif;
