--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<main class='l-main-devise'>
+  <div class='p-form-devise'>
+    <div class='p-form-devise__heading'>
+      <h2 class='c-heading--border'>SIGN UP</h2>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
+      <div class='c-form p-form-devise__item'>
+        <%= f.label :username, class: 'c-form__label' %>
+        <%= f.text_field :username, autofocus: true, class: 'c-form__input' %>
+      </div>
+
+      <div class='c-form p-form-devise__item'>
+        <%= f.label :email, class: 'c-form__label' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'c-form__input' %>
+      </div>
+
+      <div class='c-form p-form-devise__item'>
+        <%= f.label :password, class: 'c-form__label' %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "off", class: 'c-form__input' %>
+      </div>
+
+      <div class='c-form p-form-devise__item'>
+        <%= f.label :password_confirmation, class: 'c-form__label' %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'c-form__input' %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+</main>
 
 <%= render "devise/shared/links" %>
