--- a/app/assets/stylesheets/playground.scss
+++ b/app/assets/stylesheets/playground.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the playground controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// a {
+//   color: #26a3ff, #13ce66, #ff49db, #af8dd1, #9162bf, #ff7849, #ffc82c
+// }
