--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class='p-mainvisual__artwork'>
-        <img class='u-width--full' src='./assets/lcp.png'>
+        <img class='u-width--full' src='./assets/lean-canvas-image.png'>
       </div>
     </div>
   </div>
