--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -667,7 +667,7 @@ input[type="checkbox"] {
   display: grid;
   grid-template-rows: max-content;
   grid-template-columns: repeat(19, 1fr);
-  grid-template-areas: "harf-title harf-title harf-title harf-title harf-title harf-title harf-title harf-title title-0        title-1    title-1    title-2    title-2    title-3    title-3    title-4    title-4    title-5    title-5" "customer   customer   customer   customer   customer   customer   customer   customer   title-customer customer-1 customer-1 customer-2 customer-2 customer-3 customer-3 customer-4 customer-4 customer-5 customer-5" "problem    problem    problem    problem    problem    problem    problem    problem    title-problem  problem-1  problem-1  problem-2  problem-2  problem-3  problem-3  problem-4  problem-4  problem-5  problem-5" "solution   solution   solution   solution   solution   solution   solution   solution   title-solution solution-1 solution-1 solution-2 solution-2 solution-3 solution-3 solution-4 solution-4 solution-5 solution-5";
+  grid-template-areas: "harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     title-0            title-1        title-1        title-2        title-2        title-3        title-3        title-4        title-4        title-5        title-5" "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5" "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5" "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5" "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5";
   border: 2px solid #273444;
   border-radius: 4px;
   background-color: #fff; }
@@ -713,6 +713,10 @@ input[type="checkbox"] {
       border-bottom: 2px solid #273444; }
     .c-experiment-board__title--solution {
       grid-area: title-solution;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__title--precondition {
+      grid-area: title-precondition;
       border-right: 2px solid #273444;
       border-bottom: 2px solid #273444; }
   .c-experiment-board__cell {
@@ -800,6 +804,34 @@ input[type="checkbox"] {
       border-bottom: 2px solid #273444; }
     .c-experiment-board__cell--solution-5 {
       grid-area: solution-5;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition {
+      grid-area: precondition;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition-0 {
+      grid-area: precondition-0;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition-1 {
+      grid-area: precondition-1;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition-2 {
+      grid-area: precondition-2;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition-3 {
+      grid-area: precondition-3;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition-4 {
+      grid-area: precondition-4;
+      border-right: 2px solid #273444;
+      border-bottom: 2px solid #273444; }
+    .c-experiment-board__cell--precondition-5 {
+      grid-area: precondition-5;
       border-right: 2px solid #273444;
       border-bottom: 2px solid #273444; }
   .c-experiment-board__subtitle {
