--- a/front/scss/Object/Component/experiment-board.scss
+++ b/front/scss/Object/Component/experiment-board.scss
@@ -3,10 +3,11 @@
   grid-template-rows: max-content;
   grid-template-columns: repeat(19, 1fr);
   grid-template-areas:
-    "harf-title harf-title harf-title harf-title harf-title harf-title harf-title harf-title title-0        title-1    title-1    title-2    title-2    title-3    title-3    title-4    title-4    title-5    title-5"
-    "customer   customer   customer   customer   customer   customer   customer   customer   title-customer customer-1 customer-1 customer-2 customer-2 customer-3 customer-3 customer-4 customer-4 customer-5 customer-5"
-    "problem    problem    problem    problem    problem    problem    problem    problem    title-problem  problem-1  problem-1  problem-2  problem-2  problem-3  problem-3  problem-4  problem-4  problem-5  problem-5"
-    "solution   solution   solution   solution   solution   solution   solution   solution   title-solution solution-1 solution-1 solution-2 solution-2 solution-3 solution-3 solution-4 solution-4 solution-5 solution-5";
+    "harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     title-0            title-1        title-1        title-2        title-2        title-3        title-3        title-4        title-4        title-5        title-5"
+    "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5"
+    "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5"
+    "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5"
+    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5";
   
   border: 2px solid $border-color-primary;
   border-radius: 4px;
@@ -55,6 +56,12 @@
       border-right: 2px solid $border-color-primary;
       border-bottom: 2px solid $border-color-primary;
     }
+  
+    &--precondition {
+      grid-area: title-precondition;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+    }
   }
 
   &__cell {
@@ -98,6 +105,20 @@
     @for $i from 0 through 5 {
       &--solution-#{$i} {
         grid-area: solution-#{$i};
+        border-right: 2px solid $border-color-primary;
+        border-bottom: 2px solid $border-color-primary;
+      }
+    }
+
+    &--precondition {
+      grid-area: precondition;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+    }
+
+    @for $i from 0 through 5 {
+      &--precondition-#{$i} {
+        grid-area: precondition-#{$i};
         border-right: 2px solid $border-color-primary;
         border-bottom: 2px solid $border-color-primary;
       }
