--- a/front/scss/setting.scss
+++ b/front/scss/setting.scss
@@ -17,3 +17,5 @@ $btn-color-primary: #369EFB;
 $btn-color-hover: #2a85d7;
 
 $border-color-primary: #273444;
+$base-color-dafault: #4e5067;
+$base-color-secondary: #6e7087;
