--- a/front/scss/Object/Component/experiment-board.scss
+++ b/front/scss/Object/Component/experiment-board.scss
@@ -5,9 +5,37 @@
   grid-template-areas:
     "harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     harf-title     title-0            title-1        title-1        title-2        title-2        title-3        title-3        title-4        title-4        title-5        title-5"
     "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5"
+    "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5"
+    "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5"
+    "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5"
+    "customer       customer       customer       customer       customer       customer       customer       customer       title-customer     customer-1     customer-1     customer-2     customer-2     customer-3     customer-3     customer-4     customer-4     customer-5     customer-5"
+    "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5"
+    "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5"
+    "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5"
+    "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5"
     "problem        problem        problem        problem        problem        problem        problem        problem        title-problem      problem-1      problem-1      problem-2      problem-2      problem-3      problem-3      problem-4      problem-4      problem-5      problem-5"
     "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5"
-    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5";
+    "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5"
+    "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5"
+    "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5"
+    "solution       solution       solution       solution       solution       solution       solution       solution       title-solution     solution-1     solution-1     solution-2     solution-2     solution-3     solution-3     solution-4     solution-4     solution-5     solution-5"
+    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5"
+    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5"
+    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5"
+    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5"
+    "precondition   precondition   precondition   precondition   precondition   precondition   precondition   precondition   title-precondition precondition-1 precondition-1 precondition-2 precondition-2 precondition-3 precondition-3 precondition-4 precondition-4 precondition-5 precondition-5"
+    "helper-title   helper-title   helper-title   helper-title   helper-title   helper-title   helper-title   helper-title   title-method       method-1       method-1       method-2       method-2       method-3       method-3       method-4       method-4       method-5       method-5"
+    "helper-1       helper-1       helper-1       helper-1       helper-2       helper-2       helper-2       helper-2       title-method       method-1       method-1       method-2       method-2       method-3       method-3       method-4       method-4       method-5       method-5"
+    "helper-1       helper-1       helper-1       helper-1       helper-2       helper-2       helper-2       helper-2       title-method       method-1       method-1       method-2       method-2       method-3       method-3       method-4       method-4       method-5       method-5"
+    "helper-1       helper-1       helper-1       helper-1       helper-2       helper-2       helper-2       helper-2       title-method       method-1       method-1       method-2       method-2       method-3       method-3       method-4       method-4       method-5       method-5"
+    "helper-1       helper-1       helper-1       helper-1       helper-2       helper-2       helper-2       helper-2       title-method       method-1       method-1       method-2       method-2       method-3       method-3       method-4       method-4       method-5       method-5"
+    "helper-1       helper-1       helper-1       helper-1       helper-2       helper-2       helper-2       helper-2       go-out-title       go-out-title   go-out-title   go-out-title   go-out-title   go-out-title   go-out-title   go-out-title   go-out-title   go-out-title   go-out-title"
+    "helper-3       helper-3       helper-3       helper-3       helper-4       helper-4       helper-4       helper-4       title-result       result-1       result-1       result-2       result-2       result-3       result-3       result-4       result-4       result-5       result-5"
+    "helper-3       helper-3       helper-3       helper-3       helper-4       helper-4       helper-4       helper-4       title-result       result-1       result-1       result-2       result-2       result-3       result-3       result-4       result-4       result-5       result-5"
+    "helper-3       helper-3       helper-3       helper-3       helper-4       helper-4       helper-4       helper-4       title-result       result-1       result-1       result-2       result-2       result-3       result-3       result-4       result-4       result-5       result-5"
+    "helper-3       helper-3       helper-3       helper-3       helper-4       helper-4       helper-4       helper-4       title-result       result-1       result-1       result-2       result-2       result-3       result-3       result-4       result-4       result-5       result-5"
+    "helper-3       helper-3       helper-3       helper-3       helper-4       helper-4       helper-4       helper-4       title-result       result-1       result-1       result-2       result-2       result-3       result-3       result-4       result-4       result-5       result-5"
+    "helper-5       helper-5       helper-5       helper-5       helper-6       helper-6       helper-6       helper-6       title-learn        learn-1        learn-1        learn-2        learn-2        learn-3        learn-3        learn-4        learn-4        learn-5        learn-5";
   
   border: 2px solid $border-color-primary;
   border-radius: 4px;
@@ -17,56 +45,98 @@
     margin: 0;
     padding: 4px;
     font-size: 12px;
+    color: #fff;
 
     &--half {
       grid-area: harf-title;
       border-right: 2px solid $border-color-primary;
       border-bottom: 2px solid $border-color-primary;
-
+      background-color: $base-color-dafault;
     }
 
-    @for $i from 1 through 5 {
+    &--helper {
+      grid-area: helper-title;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-dafault;
+    }
+
+    &--go-out {
+      grid-area: go-out-title;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-dafault;
+    }
+
+    @for $i from 0 through 5 {
       &--#{$i} {
         grid-area: title-#{$i};
         border-right: 2px solid $border-color-primary;
         border-bottom: 2px solid $border-color-primary;
+        background-color: $base-color-dafault;
       }
-    }
-
-    &--0 {
-      grid-area: title-0;
-      border-right: 2px solid $border-color-primary;
-      border-bottom: 2px solid $border-color-primary;
     }
   
     &--customer {
       grid-area: title-customer;
       border-right: 2px solid $border-color-primary;
       border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
     }
   
     &--problem {
       grid-area: title-problem;
       border-right: 2px solid $border-color-primary;
       border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
     }
   
     &--solution {
       grid-area: title-solution;
       border-right: 2px solid $border-color-primary;
       border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
     }
   
     &--precondition {
       grid-area: title-precondition;
       border-right: 2px solid $border-color-primary;
       border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
+    }
+  
+    &--method {
+      grid-area: title-method;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
+    }
+  
+    &--result {
+      grid-area: title-result;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
+    }
+  
+    &--learn {
+      grid-area: title-learn;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+      background-color: $base-color-secondary;
     }
   }
 
   &__cell {
     min-height: 100px;
     padding: 10px;
+
+    h3 {
+      font-size: 1vw;
+      $color: $text-color-primary;
+      font-weight: bold;
+      margin: 0 0 10px;
+    }
 
     &--customer {
       grid-area: customer;
@@ -123,14 +193,60 @@
         border-bottom: 2px solid $border-color-primary;
       }
     }
+
+    @for $i from 0 through 5 {
+      &--method-#{$i} {
+        grid-area: method-#{$i};
+        border-right: 2px solid $border-color-primary;
+        border-bottom: 2px solid $border-color-primary;
+      }
+    }
+
+    &--precondition {
+      grid-area: precondition;
+      border-right: 2px solid $border-color-primary;
+      border-bottom: 2px solid $border-color-primary;
+    }
+
+    @for $i from 1 through 6 {
+      &--helper-#{$i} {
+        grid-area: helper-#{$i};
+        border-right: 2px solid $border-color-primary;
+        border-bottom: 2px solid $border-color-primary;
+        background-color: #efefef;
+      }
+    }
+
+    @for $i from 1 through 5 {
+      &--result-#{$i} {
+        grid-area: result-#{$i};
+        border-right: 2px solid $border-color-primary;
+        border-bottom: 2px solid $border-color-primary;
+      }
+    }
+
+    @for $i from 1 through 5 {
+      &--learn-#{$i} {
+        grid-area: learn-#{$i};
+        border-right: 2px solid $border-color-primary;
+        border-bottom: 2px solid $border-color-primary;
+      }
+    }
   }
 
-  &__subtitle {
+  &__lead {
     font-size: .8vw;
     $color: $text-color-primary;
     font-weight: normal;
-    margin: 0;
+    margin: 0 0 10px;
     opacity: .6;
+  }
+
+  &__text {
+    font-size: 1vw;
+    $color: $text-color-primary;
+    font-weight: bold;
+    margin: 0 0 10px;
   }
 
   &__textarea {
